add join, search Controller

--- a/views/change_password.pug
+++ b/views/change_password.pug
@@ -1,1 +1,8 @@
 extends layout/main
+
+block content 
+    .form-container
+        form(action=`${routes.change_password}`)
+            input(type="password", name="Password", placeholder="현재 비밀번호")
+            input(type="password", name="newPassword", placeholder="세 비밀번호")
+            input(type="submit", value="Change Password") 
