--- a/views/edit_video.pug
+++ b/views/edit_video.pug
@@ -1,1 +1,9 @@
 extends layout/main
+
+blcok content
+    .edit_video_container
+        form(action=`${routes.video}${routes.edit_video}`,method="post")
+            input(type="text", name="title",placeholder="제목")
+            textarea(name="description", placeholder="내용")
+            input(type="submit", value="동영상 수정")
+        a(href=`${routes.video}${routes.deleteVideo}`) 동영상 삭제
