--- a/views/upload.pug
+++ b/views/upload.pug
@@ -1,1 +1,8 @@
 extends layout/main
+    .upload__container
+        form(action=routes.upload, method="post")
+            label(for="file") 파일
+            input(type="file", id="file", name="file")
+            input(type="text", placeholder="제목", name="title")
+            textarea(name="description", placeholder="Description")
+            input(type="submit", value="업로드")
