add log in and profile Controller

--- a/views/upload.pug
+++ b/views/upload.pug
@@ -1,4 +1,6 @@
 extends layout/main
+
+block content
     .upload__container
         form(action=routes.upload, method="post")
             label(for="file") 파일
