--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -6,7 +6,15 @@ header.header
             input(type="text", placeholder="영화 제목", name="title")
     .header__client
         ul 
-            li
-                a(href=routes.join) 회원가입
-                a(href=routes.login) 로그인
-
+            if !user.isAuthenticated
+                li
+                    a(href=routes.join) 회원가입
+                li
+                    a(href=routes.login) 로그인
+            else    
+                li
+                    a(href=routes.upload) 업로드
+                li
+                    a(href=routes.user_detail(user.id)) 프로필
+                li
+                    a(href=routes.logout) 로그아웃
