--- a/views/home.pug
+++ b/views/home.pug
@@ -8,4 +8,5 @@ block content
               videoFile: video.videoFile,
               title: video.title,
               views: video.views,
+              id: video.id
             })
