--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -13,7 +13,7 @@ header.header
                     a(href=routes.login) 로그인
             else    
                 li
-                    a(href=routes.upload) 업로드
+                    a(href=`${routes.video}${routes.upload}`) 업로드
                 li
                     a(href=routes.user_detail(user.id)) 프로필
                 li
