--- a/views/layout/footer.pug
+++ b/views/layout/footer.pug
@@ -1,5 +1,6 @@
 footer.footer
     .footer__icon
-        i.fab.fa-youtube
+        a(href=routes.home)
+            i.fab.fa-youtube
     span.year__text #{siteName} #{new Date().getFullYear() } &copy;
 
