--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -1,6 +1,7 @@
 header.header
     .header__icon
-        i.fab.fa-youtube
+        a(href=routes.home)
+            i.fab.fa-youtube
     .header__search
         form(action=routes.search, method ="get")
             input(type="text", placeholder="영화 제목", name="title")
