--- a/views/video_detail.pug
+++ b/views/video_detail.pug
@@ -1,1 +1,10 @@
 extends layout/main
+
+block content
+    .video__player
+        video(src=`/${video.url}` controls=true)
+    .video__info
+        a(href=routes.edit_video(video.id)) 비디오 편집
+        h5.video__title=video.title
+        span.video__views=video.views
+        p.video__description=video.description
