--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -1,4 +1,9 @@
 header.header
+    .header__menu
+        .menu
+            div
+            div
+            div
     .header__icon
         a(href=routes.home)
             i.fab.fa-youtube
