--- a/views/mixins/videoContainer.pug
+++ b/views/mixins/videoContainer.pug
@@ -3,4 +3,4 @@ mixin videoContainer(video = {})
         a(href=routes.video_detail(video.id))
             video.video__thumbnail(src=video.videoFile, controls=true)
             h4.video__title=video.title
-            h6.video__views=video.views
+            h6.video__views=`조회수 ${video.views}회`
