--- a/views/layout/main.pug
+++ b/views/layout/main.pug
@@ -6,7 +6,7 @@ html
         link(rel="stylesheet", href="/static/styles.css")
     body
         include ./header.pug
-        main
+        main.mainwrapper
             block content
         include ./footer.pug
         script(src="/static/main.js")
