--- a/views/layout/socialLogin.pug
+++ b/views/layout/socialLogin.pug
@@ -1,5 +1,5 @@
 .social-login
-    button.social-login--facebook
+    button.social-login--github
         span
             i.fab.fa-github
         |continue with Github
