--- a/views/join.pug
+++ b/views/join.pug
@@ -1,11 +1,12 @@
 extends layout/main
 block content
-    form(action=routes.join,method="post")
-        input(type="text", name="id", placeholder="아이디", required)
-        input(type="password", name="password", placeholder="비밀번호", required)
-        input(type="password", name="password2", placeholder="비밀번호 확인", required)
-        input(type="text", name="name", placeholder="이름", required)
-        input(type="email", name="email", placeholder="이메일", required)
-        input(type="submit", value="가입")
-    include layout/socialLogin
+    .formWrapper
+        form(action=routes.join,method="post")
+            //- input(type="text", name="id", placeholder="아이디", required)
+            input(type="email", name="email", placeholder="이메일", required)
+            input(type="password", name="password", placeholder="비밀번호", required)
+            input(type="password", name="password2", placeholder="비밀번호 확인", required)
+            input(type="text", name="name", placeholder="이름", required)
+            input(type="submit", value="가입하기")
+        include layout/socialLogin
         
