--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -12,7 +12,7 @@ header.header
             input(type="text", placeholder="영화 제목", name="title")
     .header__client
         ul 
-            if !user.isAuthenticated
+            if !user
                 li
                     a(href=routes.join) 회원가입
                 li
