--- a/views/login.pug
+++ b/views/login.pug
@@ -1,8 +1,9 @@
 extends layout/main
 
 block content
-    form(action=routes.login, method="post")
-        input(type="text",name="id",placeholder="아이디")
-        input(type="password",name="password",placeholder="비밀번호")
-        input(type="submit",value="로그인")
-    include layout/socialLogin
+    .formWrapper
+        form(action=routes.login, method="post")
+            input(type="text",name="email", placeholder="이메일")
+            input(type="password",name="password",placeholder="비밀번호")
+            input(type="submit",value="로그인")
+        include layout/socialLogin
