--- a/views/video_detail.pug
+++ b/views/video_detail.pug
@@ -4,7 +4,9 @@ block content
     .video__player
         video(src=`/${video.url}` controls=true)
     .video__info
-        a(href=routes.edit_video(video.id)) 비디오 편집
+        a(href=routes.edit_video(video.id)) 
+            button 비디오 편집
         h5.video__title=video.title
-        span.video__views=video.views
+        span.video__views=`조회수 ${video.views}회`
+        hr
         p.video__description=video.description
