add Github LogIn

--- a/views/layout/socialLogin.pug
+++ b/views/layout/socialLogin.pug
@@ -1,9 +1,11 @@
 .social-login
     button.social-login--github
-        span
-            i.fab.fa-github
-        |continue with Github
+        a(href=routes.github)
+            span
+                i.fab.fa-github
+            |continue with Github
     button.social-login--facebook
-        span
-            i.fab.fa-facebook
-        |continue with Facebook
+        a(href=routes.github)
+            span
+                i.fab.fa-facebook
+            |continue with Facebook
