--- a/assets/scss/partials/form.scss
+++ b/assets/scss/partials/form.scss
@@ -23,6 +23,7 @@
         box-shadow: 2px 2px 5px 0px #3498db;
       }
     }
+
     // &:not(:last-child) {
     //   margin-bottom: 15px;
     // }
@@ -33,6 +34,7 @@
     flex-direction: column;
     align-items: center;
     border: none;
+
     :not(:last-child) {
       margin-bottom: 10px;
     }
@@ -40,11 +42,13 @@
       padding: 5px;
       width: 100%;
       max-width: 250px;
-      color: white;
-      background-color: black;
       box-shadow: 2px 2px 5px 0px black;
 
       border-radius: 3px;
+      background-color: black;
+      a {
+        color: white;
+      }
     }
     .social-login--facebook {
       padding: 5px;
@@ -54,6 +58,9 @@
       box-shadow: 2px 2px 5px 0px #4267b2;
 
       border-radius: 3px;
+      a {
+        color: white;
+      }
     }
     span {
       margin-right: 5px;
