add Facebook LogIn

--- a/views/layout/socialLogin.pug
+++ b/views/layout/socialLogin.pug
@@ -5,7 +5,7 @@
                 i.fab.fa-github
             |continue with Github
     button.social-login--facebook
-        a(href=routes.github)
+        a(href=routes.facebook)
             span
                 i.fab.fa-facebook
             |continue with Facebook
