--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -12,7 +12,7 @@ header.header
             input(type="text", placeholder="영화 제목", name="title")
     .header__client
         ul 
-            if !user
+            if !loggedUser
                 li
                     a(href=routes.join) 회원가입
                 li
@@ -21,6 +21,6 @@ header.header
                 li
                     a(href=`${routes.video}${routes.upload}`) 업로드
                 li
-                    a(href=routes.user_detail(user.id)) 프로필
+                    a(href=routes.me) 프로필
                 li
                     a(href=routes.logout) 로그아웃
