add Creator to Video, Change profile, password

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,9 +2,12 @@
 @import "./partials/form.scss";
 @import "./partials/main.scss";
 @import "./partials/header.scss";
+@import "./partials/socialLogin.scss";
 @import "./page/home.scss";
 @import "./page/videoDetail.scss";
 @import "./page/editVideo.scss";
+@import "./page/userProfile.scss";
+
 * {
   box-sizing: border-box;
 }
