--- a/views/user_detail.pug
+++ b/views/user_detail.pug
@@ -2,5 +2,11 @@ extends layout/main
 
 block content
     .user-profile
-        img.avatar(srs=user.avatarUrl)
+        img.avatar(src=user.avatarUrl)
         h4.profile__username=user.name
+        if user.id === loggedUser.id
+            .user-profile__btns
+                a(href=`/user${routes.edit_profile}`)
+                    button ✏️ Edit Profile
+                a(href=`/user${routes.change_password}`)
+                    button 🔒 Change Password 
