--- a/views/video_detail.pug
+++ b/views/video_detail.pug
@@ -4,9 +4,14 @@ block content
     .video__player
         video(src=`/${video.url}` controls=true)
     .video__info
-        a(href=routes.edit_video(video.id)) 
-            button 비디오 편집
+        if loggedUser && video.creator.id === loggedUser.id
+            a(href=routes.edit_video(video.id)) 
+                button 비디오 편집
         h5.video__title=video.title
         span.video__views=`조회수 ${video.views}회`
-        hr
         p.video__description=video.description
+    .video__author
+        a(href=routes.user_detail(video.creator.id))=video.creator.name
+        hr
+    .video__comments
+        span.video__comment-number 댓글 수 #{video.comments.length} 
