--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -3,6 +3,7 @@
 @import "./partials/main.scss";
 @import "./partials/header.scss";
 @import "./partials/socialLogin.scss";
+@import "./partials/videoPlayer.scss";
 @import "./page/home.scss";
 @import "./page/videoDetail.scss";
 @import "./page/editVideo.scss";
